# sir-disease-simulation

./: README.md
report_data_12300637/: Vaccination_rate_Plot.xlsx  disease_details.xlsx
src/: CMakeLists.txt  Dockerfile  Makefile  README.md
src/simulation/: CMakeCache.txt  Makefile  cmake_install.cmake  disease.cpp  disease.h  disease_in.ini  interaction.cpp  interaction.h  main.cpp  person.cpp  person.h  population.cpp  population.h  simulation.cpp  simulation.h  test.cpp
